app/assets/stylesheets/components/_swipe.scss
:root{
  --color-success: green;
  --color-error: red;
}

button {
  visibility: hidden;
}
button .fa-times {
  color: red;
}
button .fa-check {
  color: green;
}

/* SWIPE */
.swipe-container {
  position: relative;
  background-color: #eee;
}
.reveal-left,
.reveal-right {
  position: absolute;
  top: 0;
  height: 100%;
  width: 50px;
  z-index: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  color: white;
  padding: 8px;
  font-weight: 500;
  text-transform: uppercase;
}
.reveal-left {
  width: 100px;
  background-color: var(--color-success);
  text-align: left;
  left: 0;
  border-radius: 22px 0px 0px 22px;
  justify-content: left;
}
.reveal-right {
  width: 100px;
  background-color: var(--color-error);
  right: 0;
  text-align: right;
  flex-direction: row-reverse;
  border-radius: 0px 22px 22px 0px;
  justify-content: right;
}

.swipe-item {
  position: relative;
  width: 100%;
  display: flex;
  flex-wrap: nowrap;
  // padding: 16px 0;
  background-color: white;
  z-index: 2;
  margin-bottom: 15px;
  user-select: none;
  justify-content: space-between;
  align-items: center;
  padding: 20px;
  width: 100%;
  height: 100%;
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
  border-radius: 20px;
}

